TS-74 fix uncorrect display icons when they collapsed

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -18,6 +18,7 @@
   --navbar-height: 50px;
   --sidebar-width: 160px;
   --sidebar-width-collapsed: 80px;
+  --sidebar-items-width: var(--sidebar-width) / 2;
 
   // icons
     --icon-size-m: 18px;
